193 improve the way the files are read in the tests (#194)
* update file reading for ALP

* update file reading for KS

* update file reading for LCS

* update file reading for Max2Sat

* update file reading for MCP

* update file reading for MIS

* update file reading for PDP

* update file reading for PSP

* update file reading for SMIC

* update file reading for SRFLP

* update file reading for Talent Scheduling

* update file reading for TSP

* update file reading for TSPTW