@@ -5,7 +5,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.TestFactory;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Stream;
 
 public class MCPTest {
@@ -15,7 +15,7 @@ public class MCPTest {
     @TestFactory
     public Stream<DynamicTest> testMCP() {
         var dataSupplier =
-                new MCPTestDataSupplier(Paths.get("src", "test", "resources", "MCP").toString());
+                new MCPTestDataSupplier(Path.of("src", "test", "resources", "MCP"));
         var bench = new ProblemTestBench<>(dataSupplier);
         bench.testRelaxation = true;
         bench.testFLB = true;
