@@ -5,7 +5,7 @@ import org.junit.jupiter.api.DisplayName;
 import org.junit.jupiter.api.DynamicTest;
 import org.junit.jupiter.api.TestFactory;
 
-import java.nio.file.Paths;
+import java.nio.file.Path;
 import java.util.stream.Stream;
 
 public class TalenSchedTest {
@@ -15,8 +15,8 @@ public class TalenSchedTest {
     @TestFactory
     public Stream<DynamicTest> testTS() {
         var dataSupplier =
-                new TalentSchedTestDataSupplier(Paths.get("src", "test", "resources",
-                        "TalentScheduling").toString());
+                new TalentSchedTestDataSupplier(Path.of("src", "test", "resources",
+                        "TalentScheduling"));
         var bench = new ProblemTestBench<>(dataSupplier);
         bench.testRelaxation = true;
         bench.testFLB = true;
